--- a/taburetes.html
+++ b/taburetes.html
@@ -4,23 +4,25 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
+    <meta name="description"
+        content="Sirenas - Motion graphics video inspired by Taburete's song, created by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="sirenas.title">Sirenas | Mateo Bonilla</title>
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+    <!-- Main Styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="assets/css/icons.css">
+    <link rel="stylesheet" href="assets/css/i18n.css">
 
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
-
-
     <div class="lookbook">
 
         <!-- Página de portada -->
@@ -28,46 +30,213 @@
             <div class="lookbook-title" style="background-color: rgb(1, 1, 68);">Sirenas - Taburetes</div>
 
         </div>
-        <p class="title">Sirenas - Taburete</p>
+
+        <p class="title" data-i18n="sirenas.projectTitle">Sirenas - Motion Video</p>
+
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="sirenas.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>Motion Video</li>
+                        <li data-i18n="sirenas.category1">Motion Graphics</li>
+                        <li data-i18n="sirenas.category2">Animation</li>
+                        <li data-i18n="sirenas.category3">Music Visualization</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="sirenas.yearTitle">YEAR</dt>
                 <dd>2023</dd>
+
+                <dt data-i18n="sirenas.clientTitle">PROJECT TYPE</dt>
+                <dd data-i18n="sirenas.client">Academic / Personal Project</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
-                    BI Activate is a website for a banking organization designed to make collaboration easier across
-                    teams.
-                    It helps employees discover peer-led initiatives (clubs, activities, and projects), connect with
-                    each
-                    other, and join effortlessly from any area of the company. The site is publicly hosted on Firebase
-                    Hosting.
+                <p data-i18n="sirenas.description1">
+                    "Sirenas" is a motion graphics video created as a visual interpretation of the song by Taburete. The
+                    project seeks to represent the emotional intensity, rhythm, and narrative of the lyrics through
+                    abstract animation and synchronized transitions.
                 </p>
-                <p>
-                    Tech stack: HTML5, SCSS, JavaScript; Firebase (Hosting); Figma (UI/UX design & prototyping); Adobe
-                    After
-                    Effects (video editing).
+                <p data-i18n="sirenas.description2">
+                    Designed and animated using Adobe After Effects and Illustrator, the project experiments with shape
+                    motion, typography, and dynamic composition to evoke the sensations of the song.
                 </p>
-                <a class="view-link" href="https://www.youtube.com/watch?v=IoMtD9ji0_8" target="_blank" rel="noopener">view the
-                    website</a>
+                <a class="view-link" href="https://www.youtube.com/watch?v=IoMtD9ji0_8" target="_blank" rel="noopener"
+                    data-i18n="sirenas.viewVideo">Watch Video</a>
             </div>
         </section>
-        <div class="page">
-            <p class="subtitle"> Motion Video</p>
-            <iframe class="video" style="height: 500px;" src="https://www.youtube.com/embed/IoMtD9ji0_8"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
 
+        <!-- TOOLS -->
+        <section class="subtitle">
+            <dt data-i18n="sirenas.toolsTitle">Tech & Tools</dt>
+        </section>
+        <div class="tools-icons">
+            <i class="devicon-aftereffects-plain colored" title="Adobe After Effects"></i>
+            <i class="devicon-illustrator-plain colored" title="Adobe Illustrator"></i>
+            <i class="devicon-premierepro-plain colored" title="Adobe Premiere Pro"></i>
         </div>
+
+        <!-- PROJECT OBJECTIVES -->
+        <p class="title" data-i18n="sirenas.objectivesTitle">Project Objectives</p>
+
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="sirenas.objective1.title">Concept</h3>
+                    <ul>
+                        <li data-i18n="sirenas.objective1.item1">Translate the emotion of the song “Sirenas” into a
+                            visual narrative.</li>
+                        <li data-i18n="sirenas.objective1.item2">Experiment with rhythm, color, and typography to
+                            represent the lyrics.</li>
+                        <li data-i18n="sirenas.objective1.item3">Create a piece where sound and image merge into one
+                            cohesive story.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="sirenas.objective2.title">Design</h3>
+                    <ul>
+                        <li data-i18n="sirenas.objective2.item1">Develop minimalist visual compositions aligned with the
+                            song’s mood.</li>
+                        <li data-i18n="sirenas.objective2.item2">Synchronize animation timing precisely with musical
+                            cues.</li>
+                        <li data-i18n="sirenas.objective2.item3">Use vector shapes and motion paths to create visual
+                            flow.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="sirenas.objective3.title">Outcome</h3>
+                    <ul>
+                        <li data-i18n="sirenas.objective3.item1">Produce a complete motion graphics video synchronized
+                            with audio.</li>
+                        <li data-i18n="sirenas.objective3.item2">Express visual emotion through abstraction rather than
+                            literal storytelling.</li>
+                        <li data-i18n="sirenas.objective3.item3">Enhance visual storytelling techniques through music
+                            interpretation.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- DESIGN PROCESS -->
+        <p class="title" data-i18n="sirenas.designProcessTitle">Design Process</p>
+
+        <div class="page">
+            <section class="research-section">
+                <p class="subtitle" data-i18n="sirenas.researchTitle">Research</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="sirenas.keyFindingsTitle">Key Findings</h4>
+                        <ul class="research-list">
+                            <li data-i18n="sirenas.keyFinding1">The song evokes a duality between calm and intensity,
+                                like waves and sirens.</li>
+                            <li data-i18n="sirenas.keyFinding2">Visual rhythm must reflect both musical tempo and
+                                lyrical emotion.</li>
+                            <li data-i18n="sirenas.keyFinding3">Color and motion can convey emotional transitions better
+                                than literal imagery.</li>
+                        </ul>
+                        <h4 class="research-subtitle" data-i18n="sirenas.methodologyTitle">Methodology</h4>
+                        <p class="research-method" data-i18n="sirenas.methodology">Music Analysis · Storyboard ·
+                            Animation Tests</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="sirenas.definitionTitle">Definition</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="sirenas.projectConceptTitle">The Project</h4>
+                        <ul class="research-list">
+                            <li data-i18n="sirenas.projectConceptItem1">A motion graphics video synchronized to the
+                                rhythm and message of “Sirenas”.</li>
+                            <li data-i18n="sirenas.projectConceptItem2">Each segment of the animation represents an
+                                emotional stage of the song.</li>
+                            <li data-i18n="sirenas.projectConceptItem3">Abstract shapes replace literal visuals to focus
+                                on feeling and rhythm.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="sirenas.ideationTitle">Ideation</p>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="sirenas.storyTitle">Visual and Sound Harmony</h4>
+                        <ul class="research-list">
+                            <li data-i18n="sirenas.storyItem1">Design of visual beats matching tempo changes.</li>
+                            <li data-i18n="sirenas.storyItem2">Color palette transitions reflecting emotional dynamics.
+                            </li>
+                            <!-- <li data-i18n="sirenas.storyItem3">Use of particle motion and wave-like shapes for
+                                atmosphere.</li> -->
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <!-- RESULTS -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="sirenas.resultsTitle">Results</p>
+            <div class="research-content">
+                <div class="objective-card">
+                    <h4 class="research-subtitle" data-i18n="sirenas.resultsDescription">
+                        The final video captures the essence of “Sirenas” through color, rhythm, and abstract animation.
+                        It visualizes sound and emotion as one continuous narrative, synchronizing every beat and lyric
+                        with motion.
+                    </h4>
+                    <ul>
+                        <li data-i18n="sirenas.resultItem1">Complete motion video synced with the original song.</li>
+                        <li data-i18n="sirenas.resultItem2">Abstract storytelling through light, rhythm, and motion.
+                        </li>
+                        <li data-i18n="sirenas.resultItem3">Enhanced timing, editing, and motion synchronization
+                            techniques.</li>
+                    </ul>
+                    <div class="image-placeholder">
+                        <iframe class="video" style="height: 500px;" src="https://www.youtube.com/embed/IoMtD9ji0_8"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CHALLENGES & LEARNINGS -->
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="sirenas.challengesTitle">Challenges and Learnings</h3>
+                    <p class="research-subtitle" data-i18n="sirenas.challengesDescription" style="font-size: 16px;">
+                        The most challenging part was translating sound into visual rhythm. It required deep analysis of
+                        the track, synchronizing frames precisely with beats, and balancing abstraction with meaning.
+                        The process refined my motion design skills and timing sense.
+                    </p>
+                    <ul>
+                        <li data-i18n="sirenas.challengeItem1">Synchronizing keyframes and audio layers precisely.</li>
+                        <li data-i18n="sirenas.challengeItem2">Maintaining emotional coherence while using abstract
+                            visuals.</li>
+                        <li data-i18n="sirenas.challengeItem3">Managing render performance for high-resolution
+                            animation.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="sirenas.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="sirenas.nextStep1">Develop additional music visualizations exploring other
+                            genres.</li>
+                        <!-- <li data-i18n="sirenas.nextStep2">Integrate 3D motion and particle systems for depth.</li> -->
+                        <li data-i18n="sirenas.nextStep3">Collaborate with musicians for official music videos.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <br>
     </div>
+
+    <!-- FOOTER -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
@@ -79,7 +248,7 @@
         </div>
     </footer>
 
-
+    <!-- NAVIGATION -->
     <a class="flecha-flotante" href='manual-marca.html'>
         <i class="ti-angle-double-left"></i>
     </a>
@@ -87,25 +256,18 @@
         <i class="ti-angle-double-right"></i>
     </a>
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="sirenas.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- JS -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <!-- Isotope  -->
-    <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
-
-    <!-- MateoB js -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
     <script src="assets/js/mateob.js"></script>
-
+    <script src="assets/js/i18n.js"></script>
 </body>
 
 </html>
