--- a/alpina.html
+++ b/alpina.html
@@ -4,72 +4,222 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
+    <meta name="description" content="Alpina Modular Booth Design by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="alpina.title">Alpina | Mateo Bonilla</title>
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+    <!-- Styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
-
-    <!-- modal -->
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/modalmensaje.css">
+    <link rel="stylesheet" href="assets/css/icons.css">
+    <link rel="stylesheet" href="assets/css/i18n.css">
 
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
 
     <div class="lookbook">
 
-        <!-- Página de portada -->
+        <!-- COVER -->
         <div class="page">
-            <div class="lookbook-title" style="background-color: black;">Alpina Modular Booth Design</div>
+            <div class="lookbook-title" style="background-color: black;" data-i18n="alpina.projectTitle">Alpina Modular Booth Design</div>
         </div>
-        <p class="title">Alpina - Modular Booth Design</p>
+
+        <p class="title" data-i18n="alpina.projectTitle">Alpina - Modular Booth Design</p>
+
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="alpina.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>Design</li>
-                        <li>Interactive brand</li>
+                        <li data-i18n="alpina.category1">Brand Design</li>
+                        <li data-i18n="alpina.category2">Interactive Experience</li>
+                        <li data-i18n="alpina.category3">3D Visualization</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="alpina.yearTitle">YEAR</dt>
                 <dd>2025</dd>
-                <dt>CLIENT</dt>
-                <dd>Avena Alpina</dd>
+
+                <dt data-i18n="alpina.clientTitle">CLIENT</dt>
+                <dd data-i18n="alpina.client">Avena Alpina</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
-                    Promotional stand for the “Mundozarella” campaign.
-                    Aimed at showcasing two specialty cheeses through an interactive experience. I designed an
-                    interactive booth built around two distinct “worlds,” encouraging user engagement and product
-                    discovery.
+                <p data-i18n="alpina.description1">
+                    Modular booth design created for Alpina’s “Mundozarella” promotional campaign.
+                    The project aimed to showcase two specialty cheese products through a dynamic and interactive brand
+                    experience,
+                    combining physical design with digital simulation.
                 </p>
-                <p>
-                    Tech & tools: Unity (3D render), Adobe Illustrator (artwork and visual design).
+                <p data-i18n="alpina.description2">
+                    Tools: Unity (3D simulation and rendering), Adobe Illustrator (visual concept and layout design).
                 </p>
             </div>
         </section>
-        <div class="page">
-            <p class="subtitle">Gallery</p>
-            <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                    src="./assets/imgs/Alpina/RenderStand - SampleScene - Windows, Mac, Linux - Unity 6.0 (6000.0.47f1) _DX11_ 2025-04-28 17-48-50.mp4"></video>
-            </div>
-            <div class="image-placeholder"><img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174435.png"
-                    alt=""></div>
-            <div class="image-placeholder"><img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174357.png"
-                    alt=""></div>
+
+        <!-- TOOLS -->
+        <section class="subtitle">
+            <dt data-i18n="alpina.toolsTitle">Tech & Tools</dt>
+        </section>
+        <div class="tools-icons">
+            <i class="devicon-unity-plain" title="Unity 3D"></i>
+            <i class="devicon-illustrator-plain colored" title="Adobe Illustrator"></i>
+            <i class="devicon-photoshop-plain colored" title="Adobe Photoshop"></i>
         </div>
+
+        <!-- OBJECTIVES -->
+        <p class="title" data-i18n="alpina.objectivesTitle">Project Objectives</p>
+        <section class="objectives-section">
+            <div class="objectives-container">
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="alpina.objective1.title">Concept</h3>
+                    <ul>
+                        <li data-i18n="alpina.objective1.item1">Design an immersive booth experience aligned with
+                            Alpina’s brand identity.</li>
+                        <li data-i18n="alpina.objective1.item2">Highlight the uniqueness of each cheese through visual
+                            and spatial contrast.</li>
+                        <li data-i18n="alpina.objective1.item3">Encourage visitor participation and interaction with
+                            modular spaces.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="alpina.objective2.title">Design</h3>
+                    <ul>
+                        <li data-i18n="alpina.objective2.item1">Develop 3D models simulating materials, lighting, and
+                            structure.</li>
+                        <li data-i18n="alpina.objective2.item2">Design modular panels adaptable for different events and
+                            spaces.</li>
+                        <li data-i18n="alpina.objective2.item3">Integrate textures and colors inspired by the product’s
+                            packaging.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="alpina.objective3.title">Outcome</h3>
+                    <ul>
+                        <li data-i18n="alpina.objective3.item1">Create a functional, visually cohesive 3D prototype.
+                        </li>
+                        <li data-i18n="alpina.objective3.item2">Simulate a real exhibition environment in Unity.</li>
+                        <li data-i18n="alpina.objective3.item3">Deliver a digital render showcasing user perspective and
+                            flow.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- DESIGN PROCESS -->
+        <p class="title" data-i18n="alpina.designProcessTitle">Design Process</p>
+        <section class="research-section">
+            <p class="subtitle" data-i18n="alpina.researchTitle">Research</p>
+            <div class="research-content">
+                <div class="research-text">
+                    <h4 class="research-subtitle" data-i18n="alpina.keyFindingsTitle">Key Findings</h4>
+                    <ul class="research-list">
+                        <li data-i18n="alpina.keyFinding1">Users are more attracted to tactile and sensory experiences
+                            during events.</li>
+                        <li data-i18n="alpina.keyFinding2">A modular approach increases brand versatility across
+                            different fairs.</li>
+                        <li data-i18n="alpina.keyFinding3">Lighting and material finishes heavily influence perception
+                            of product quality.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="research-section">
+            <p class="subtitle" data-i18n="alpina.ideationTitle">Ideation</p>
+            <div class="research-content">
+                <div class="research-text">
+                    <h4 class="research-subtitle" data-i18n="alpina.storyTitle">Concept Development</h4>
+                    <ul class="research-list">
+                        <li data-i18n="alpina.storyItem1">Two worlds — each representing a unique cheese — converge
+                            under the same structure.</li>
+                        <li data-i18n="alpina.storyItem2">Colors and shapes mirror the contrast between freshness and
+                            intensity.</li>
+                        <li data-i18n="alpina.storyItem3">Interactive elements simulate product textures and flavors
+                            through light and motion.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- RESULTS -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="alpina.resultsTitle">Results</p>
+            <div class="research-content">
+                <div class="objective-card">
+                    <h4 class="research-subtitle" data-i18n="alpina.resultsDescription">
+                        The final modular booth successfully integrates brand storytelling, interactivity, and
+                        structural efficiency.
+                        Through digital simulation and physical feasibility studies, the concept merges functionality
+                        with user engagement.
+                    </h4>
+                    <ul>
+                        <li data-i18n="alpina.resultItem1">3D-rendered stand prototype in Unity with full material
+                            mapping.</li>
+                        <li data-i18n="alpina.resultItem2">Spatial design adaptable for various retail environments.
+                        </li>
+                        <li data-i18n="alpina.resultItem3">Dynamic lighting simulation enhancing user flow perception.
+                        </li>
+                    </ul>
+                    <div class="image-placeholder">
+                        <video autoplay loop muted playsinline class="video"
+                            src="./assets/imgs/Alpina/RenderStand - SampleScene - Windows, Mac, Linux - Unity 6.0 (6000.0.47f1) _DX11_ 2025-04-28 17-48-50.mp4"></video>
+                    </div>
+                    <div class="image-placeholder">
+                        <img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174357.png" alt="Alpina Booth Render">
+                    </div>
+                    <div class="image-placeholder">
+                        <img src="./assets/imgs/Alpina/Captura de pantalla 2025-04-28 174435.png" alt="Alpina Booth Layout">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- CHALLENGES & LEARNINGS -->
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="alpina.challengesTitle">Challenges and Learnings</h3>
+                    <p class="research-subtitle" data-i18n="alpina.challengesDescription" style="font-size: 16px;">
+                        The project challenged me to merge product marketing with spatial storytelling.
+                        Building a coherent design that worked both visually and structurally required iteration,
+                        testing, and adaptation.
+                    </p>
+                    <ul>
+                        <li data-i18n="alpina.challengeItem1">Balancing aesthetics with functional design for
+                            modularity.</li>
+                        <li data-i18n="alpina.challengeItem2">Simulating realistic lighting within Unity for exhibition
+                            settings.</li>
+                        <li data-i18n="alpina.challengeItem3">Coordinating textures and materials to align with brand
+                            color psychology.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="alpina.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="alpina.nextStep1">Develop additional booth versions for other product lines.</li>
+                        <li data-i18n="alpina.nextStep2">Incorporate interactive screens and AR product experiences.
+                        </li>
+                        <li data-i18n="alpina.nextStep3">Prototype the stand physically for real trade fair testing.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <br>
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
@@ -81,33 +231,25 @@
         </div>
     </footer>
 
-    <a class="flecha-flotante" href='foto.html';">
+    <!-- NAVIGATION -->
+    <a class="flecha-flotante" href="sirenas.html">
         <i class="ti-angle-double-left"></i>
     </a>
-    <a class="flecha-flotante-right" href='fragment.html';">
+    <a class="flecha-flotante-right" href="fragment.html">
         <i class="ti-angle-double-right"></i>
     </a>
 
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="alpina.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- JS -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        crossorigin="anonymous"></script>
-    <!-- Isotope  -->
-    <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
-
-    <!-- MateoB js -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
     <script src="assets/js/mateob.js"></script>
-
+    <script src="assets/js/i18n.js"></script>
 
 </body>
 
