--- a/biActivate.html
+++ b/biActivate.html
@@ -4,98 +4,294 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
-    <!-- font icons -->
+    <meta name="description" content="BI Activate project by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="bi.title">BI Activate | Mateo Bonilla</title>
+
+    <!-- Font & Icon Libraries -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+    <!-- Main Styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="assets/css/icons.css">
+    <link rel="stylesheet" href="assets/css/i18n.css">
+
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
 </head>
 
 <body>
-    <div class="lookbook ">
 
-        <!-- Página de portada -->
+    <div class="lookbook">
+
+        <!-- COVER PAGE -->
         <div class="page">
             <div class="lookbook-title">
-                <img src="./assets/imgs/BiActivate/logos-Activate.jpg" alt="logo-activate">
+                <img src="./assets/imgs/BiActivate/logos-Activate.jpg" alt="BI Activate cover">
             </div>
         </div>
-        <p class="title">BI Activate</p>
+
+        <p class="title" data-i18n="bi.projectTitle">BI Activate</p>
+
+        <!-- META INFO -->
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="bi.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>Web Development</li>
-                        <li>UX/UI Design</li>
-                        <li>Video Edition</li>
+                        <li data-i18n="bi.category1">Web Development</li>
+                        <li data-i18n="bi.category2">UX/UI Design</li>
+                        <li data-i18n="bi.category3">Video Edition</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="bi.yearTitle">YEAR</dt>
                 <dd>2025</dd>
-                <dt>CLIENT</dt>
-                <dd>Banco Internacional</dd>
+
+                <dt data-i18n="bi.clientTitle">CLIENT</dt>
+                <dd data-i18n="bi.client">Banco Internacional</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
+                <p data-i18n="bi.description1">
                     BI Activate is a website for a banking organization designed to make collaboration easier across
-                    teams.
-                    It helps employees discover peer-led initiatives (clubs, activities, and projects), connect with
-                    each
-                    other, and join effortlessly from any area of the company. The site is publicly hosted on Firebase
-                    Hosting.
+                    teams. It helps employees discover peer-led initiatives (clubs, activities, and projects), connect
+                    with each other, and join effortlessly from any area of the company.
                 </p>
-                <p>
-                    Tech stack: HTML5, SCSS, JavaScript; Firebase (Hosting); Figma (UI/UX design & prototyping); Adobe
-                    After
-                    Effects (video editing).
+                <p data-i18n="bi.description2">
+                    The site is hosted on Firebase and built using HTML5, SCSS, and JavaScript. Design and prototypes
+                    were created using Figma, and promotional videos were produced in Adobe After Effects.
                 </p>
-                <a class="view-link" href="https://activate-bi-d05e6.web.app/" target="_blank" rel="noopener">view the
-                    website</a>
+                <a class="view-link" href="https://activate-bi-d05e6.web.app/" target="_blank" rel="noopener"
+                    data-i18n="bi.viewSite">View the website</a>
             </div>
         </section>
+
+        <!-- TECH & TOOLS -->
+        <section class="subtitle">
+            <dt data-i18n="bi.toolsTitle">Tech & Tools</dt>
+
+        </section>
+        <div class="tools-icons">
+            <i class="devicon-html5-plain colored" title="HTML5"></i>
+            <i class="devicon-sass-original colored" title="SASS"></i>
+            <i class="devicon-javascript-plain colored" title="JavaScript"></i>
+            <i class="devicon-figma-plain colored" title="Figma"></i>
+            <i class="devicon-firebase-plain colored" title="Firebase"></i>
+            <i class="devicon-aftereffects-plain colored" title="After Effects"></i>
+        </div>
+
+
+        <!-- PROJECT OBJECTIVES -->
+        <p class="title" data-i18n="bi.objectivesTitle">Project Objectives</p>
+
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bi.objective1.title">Purpose</h3>
+                    <ul>
+                        <li data-i18n="bi.objective1.item1">Create a digital space that connects employees through
+                            shared interests and internal initiatives.</li>
+                        <li data-i18n="bi.objective1.item2">Strengthen Banco Internacional’s internal culture through
+                            collaboration and engagement.</li>
+                        <li data-i18n="bi.objective1.item3">Encourage participation in company-led activities using a
+                            clear and accessible interface.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bi.objective2.title">Research</h3>
+                    <ul>
+                        <li data-i18n="bi.objective2.item1">Understand communication challenges between departments.
+                        </li>
+                        <li data-i18n="bi.objective2.item2">Identify what motivates employees to join internal events
+                            and clubs.</li>
+                        <li data-i18n="bi.objective2.item3">Collect data to define usability goals and design
+                            priorities.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bi.objective3.title">Impact</h3>
+                    <ul>
+                        <li data-i18n="bi.objective3.item1">Promote a stronger sense of belonging within the
+                            organization.</li>
+                        <li data-i18n="bi.objective3.item2">Increase visibility and participation in community-led
+                            initiatives.</li>
+                        <li data-i18n="bi.objective3.item3">Offer a platform that reflects the values of collaboration
+                            and innovation.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- RESEARCH & DEFINITION -->
+        <p class="title" data-i18n="bi.designProcessTitle">Design Process</p>
+
         <div class="page">
-            <p class="subtitle">Home Page</p>
-            <div class="image-placeholder"><img src="./assets/imgs/BiActivate/homeActivate.png"
-                    alt="Home Page Bi Activate">
-            </div>
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bi.researchTitle">Research</p>
 
-            <p class="subtitle">Championship Page</p>
-            <div class="image-placeholder"><img src="./assets/imgs/BiActivate/campeonato.png"
-                    alt="Home Page Bi Activate">
-            </div>
-            <div class="image-placeholder"><img src="./assets/imgs/BiActivate/campeonato1.png"
-                    alt="Home Page Bi Activate">
-            </div>
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bi.keyFindingsTitle">Key Findings</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bi.keyFinding1">Employees lacked a unified platform to connect beyond daily
+                                tasks.</li>
+                            <li data-i18n="bi.keyFinding2">Internal initiatives were poorly communicated or hard to
+                                discover.</li>
+                            <li data-i18n="bi.keyFinding3">There was high interest in joining clubs and events, but low
+                                visibility.</li>
+                        </ul>
 
-            <p class="subtitle">Club's Page</p>
-            <div class="image-placeholder"><img src="./assets/imgs/BiActivate/club.png" alt="Home Page Bi Activate">
-            </div>
+                        <h4 class="research-subtitle" data-i18n="bi.methodologyTitle">Methodology</h4>
+                        <p class="research-method" data-i18n="bi.methodology">Surveys, Interviews & Usability Testing
+                        </p>
+                    </div>
 
-            <p class="subtitle">Mobile</p>
-            <div class="image-placeholder"><img src="./assets/imgs/BiActivate/mobile.png" alt="Home Page Bi Activate">
-            </div>
+                    <div class="research-stats">
+                        <div class="stat-card">
+                            <h3>120+</h3>
+                            <p data-i18n="bi.stat1">Responses in internal employee survey</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>8</h3>
+                            <p data-i18n="bi.stat2">Workshops held with different departments</p>
+                        </div>
+                        <div class="stat-card">
+                            <h3>5+</h3>
+                            <p data-i18n="bi.stat3">Design iterations before launch</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bi.definitionTitle">Definition</p>
+
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bi.projectConceptTitle">Project Concept</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bi.projectConceptItem1">
+                                Build a central digital hub where employees can explore, join, and promote internal
+                                activities.
+                            </li>
+                            <li data-i18n="bi.projectConceptItem2">
+                                Encourage collaboration and recognition through visibility of peer-led initiatives.
+                            </li>
+                            <li data-i18n="bi.projectConceptItem3">
+                                Create a seamless experience optimized for quick access on desktop and mobile.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <div class="page">
+
+            <!-- IDEATION -->
+            <section class="research-section">
+                <p class="subtitle" data-i18n="bi.ideationTitle">Ideation</p>
+
+                <div class="research-content">
+                    <div class="research-text">
+                        <h4 class="research-subtitle" data-i18n="bi.structureTitle">Structure and Flow</h4>
+                        <ul class="research-list">
+                            <li data-i18n="bi.structureItem1">
+                                Defined a content architecture divided into categories: Clubs, Events, and News.
+                            </li>
+                            <li data-i18n="bi.structureItem2">
+                                Prototyped a card-based interface for easy navigation and visual consistency.
+                            </li>
+                            <li data-i18n="bi.structureItem3">
+                                Designed a user journey emphasizing participation and discovery.
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
 
         </div>
+        <br>
+        <!-- GALLERY -->
+        <p class="title" data-i18n="bi.galleryTitle">Project Screens</p>
+        <div class="page">
+            <p class="subtitle" data-i18n="bi.homeTitle">Home Page</p>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BiActivate/homeActivate.png" alt="BI Activate home">
+            </div>
+
+            <p class="subtitle" data-i18n="bi.championshipTitle">Championship Page</p>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BiActivate/campeonato.png" alt="Championship Page">
+            </div>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BiActivate/campeonato1.png" alt="Championship Page 2">
+            </div>
+
+            <p class="subtitle" data-i18n="bi.clubsTitle">Clubs Page</p>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BiActivate/club.png" alt="Clubs Page">
+            </div>
+
+            <p class="subtitle" data-i18n="bi.mobileTitle">Mobile View</p>
+            <div class="image-placeholder">
+                <img src="./assets/imgs/BiActivate/mobile.png" alt="Mobile layout">
+            </div>
+        </div>
+
+        <!-- CHALLENGES & LEARNINGS -->
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bi.challengesTitle">Challenges and Learnings</h3>
+                    <p class="research-subtitle" data-i18n="bi.challengesDescription" style="font-size:16px;">
+                        Developing a platform that felt both corporate and human-centered was a key challenge. Through
+                        this project I learned how to align UX/UI principles with institutional identity while
+                        maintaining an inviting tone that promotes collaboration.
+                    </p>
+                    <ul>
+                        <li data-i18n="bi.challengeItem1">Balancing accessibility and visual identity for a banking
+                            brand.</li>
+                        <li data-i18n="bi.challengeItem2">Testing with real users from different departments improved
+                            adoption insights.</li>
+                        <li data-i18n="bi.challengeItem3">Managing deployment and maintenance through Firebase
+                            strengthened my full-stack workflow.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="bi.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="bi.nextStep1">Integrate login and personalization features.</li>
+                        <li data-i18n="bi.nextStep2">Expand to include new activity types and departments.</li>
+                        <li data-i18n="bi.nextStep3">Implement analytics to measure participation and engagement.</li>
+                        <li data-i18n="bi.nextStep4">
+                            Launch of an accessible and responsive internal collaboration platform.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <br>
     </div>
 
+    <!-- FOOTER -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i>
-                By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
+                    class="ti-heart text-danger"></i> By
+                <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
             </p>
         </div>
     </footer>
 
+    <!-- NAVIGATION -->
     <a class="flecha-flotante" href='taburetes.html'>
         <i class="ti-angle-double-left"></i>
     </a>
@@ -103,27 +299,19 @@
         <i class="ti-angle-double-right"></i>
     </a>
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="bi.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- SCRIPTS -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
-
-
-    <!-- MateoB js -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
     <script src="assets/js/mateob.js"></script>
-
-    <script src="assets/js/dragons.js"></script>
+    <script src="assets/js/i18n.js"></script>
 </body>
 
 </html>
