--- a/survival-m.html
+++ b/survival-m.html
@@ -4,115 +4,272 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Mateo Bonilla.">
-    <meta name="author" content="Devcrud">
-    <title>MateoBonilla Portfolio</title>
+    <meta name="description" content="Survival M - 3D Survival Demo by Mateo Bonilla.">
+    <meta name="author" content="Mateo Bonilla">
+    <title data-i18n="survival.title">Survival M | Mateo Bonilla</title>
+
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
-    <!-- Bootstrap + MateoB main styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
+    <!-- Main styles -->
     <link rel="stylesheet" href="assets/css/mateob.css">
     <link rel="stylesheet" href="assets/css/diseno.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="assets/css/icons.css">
+    <link rel="stylesheet" href="assets/css/i18n.css">
 
     <link rel="icon" type="image/png" href="./assets/imgs/nite.png">
-
 </head>
 
 <body>
     <div class="lookbook">
 
-        <!-- Página de portada -->
+        <!-- Portada -->
         <div class="page">
             <div class="lookbook-title" style="background-color: brown;">SURVIVAL M</div>
         </div>
-        <p class="title">Survivial M</p>
+
+        <p class="title" data-i18n="survival.projectTitle">Survival M – 3D Survival Demo</p>
+
+        <!-- Info principal -->
         <section class="case-wrap">
-            <!-- IZQUIERDA: tu “tabla” de labels/valores -->
             <dl class="meta-grid">
-                <dt>CATEGORY</dt>
+                <dt data-i18n="survival.categoryTitle">CATEGORY</dt>
                 <dd>
                     <ul class="meta-list">
-                        <li>Game Development</li>
-                        <li>Unity 3D Design</li>
-                        <li>UX/UI Design</li>
+                        <li data-i18n="survival.category1">Game Development</li>
+                        <li data-i18n="survival.category2">Unity 3D Design</li>
+                        <li data-i18n="survival.category3">UX/UI Design</li>
                     </ul>
                 </dd>
-                <dt>YEAR</dt>
+
+                <dt data-i18n="survival.yearTitle">YEAR</dt>
                 <dd>2022</dd>
+
+                <dt data-i18n="survival.clientTitle">CLIENT</dt>
+                <dd data-i18n="survival.client">Personal Project</dd>
             </dl>
+
             <div class="case-desc">
-                <p>
-                    Survival M is a playable demo built with Unity 3D, inspired by classic Resident Evil titles. Your
-                    goal
-                    is to escape a zombie-ridden city, manage scarce resources, and defeat a final boss.
+                <p data-i18n="survival.description1">
+                    Survival M is a 3D demo created in Unity, inspired by classic Resident Evil games. Players must
+                    navigate a city overrun by zombies, manage limited resources, and survive intense encounters
+                    culminating in a final boss battle.
                 </p>
-                <p>
-                    Tech & tools: Unity (3D development), C# (programming).
+                <p data-i18n="survival.description2">
+                    Tech & Tools: Unity (3D development), C# (programming).
                 </p>
             </div>
         </section>
+        <div>
+            <section class="subtitle">
+                <dt data-i18n="fragment.description2">Tech & Tools</dt>
+
+            </section>
+            <div class="tools-icons">
+                <i class="devicon-unity-plain" title="Unity"></i>
+                <i class="devicon-csharp-plain colored" title="C#"></i>
+                <i class="devicon-figma-plain " title="Figma"></i>
+            </div>
+        </div>
+        <!-- Video -->
+        <p class="title" data-i18n="survival.videoTitle">Demo Video</p>
         <div class="page">
-            <p class="subtitle"> Demo Video</p>
-            <div class="image-placeholder"><video autoplay loop muted playsinline class="video"
-                    src="./assets/imgs/survivalM/survival-m.m4v"></video></div>
-            <div>
-                <p class="subtitle">Menu</p>
-                <img class="image-placeholder" src="./assets/imgs/survivalM/survival.jpg" alt="pause image">
-            </div>
-            <div>
-                <p class="subtitle">Pause Menu</p>
-                <img class="image-placeholder" src="./assets/imgs/survivalM/survivalM8.png" alt="">
-            </div>
-            <div>
-                <p class="subtitle">Boss Batle</p>
-                <img class="image-placeholder" src="./assets/imgs/survivalM/survivalM6.png" alt="">
-            </div>
-            <div>
-                <p class="subtitle">Game Over Menu</p>
-                <img class="image-placeholder" src="./assets/imgs/survivalM/survivalM10.png" alt="">
+            <div class="image-placeholder">
+                <video autoplay loop muted playsinline class="video"
+                    src="./assets/imgs/survivalM/survival-m.m4v"></video>
             </div>
         </div>
 
+        <!-- Objetivos del proyecto -->
+        <p class="title" data-i18n="survival.objectivesTitle">Project Objectives</p>
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="survival.objective1.title">Proposal</h3>
+                    <ul>
+                        <li data-i18n="survival.objective1.item1">Create a playable demo focused on survival mechanics
+                            and tension.</li>
+                        <li data-i18n="survival.objective1.item2">Simulate resource management and combat under
+                            pressure.</li>
+                        <li data-i18n="survival.objective1.item3">Design a cohesive visual and narrative experience for
+                            players.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="survival.objective2.title">Research</h3>
+                    <ul>
+                        <li data-i18n="survival.objective2.item1">Analyze player behavior in stress situations within
+                            survival games.</li>
+                        <li data-i18n="survival.objective2.item2">Identify key factors that increase immersion and
+                            engagement.</li>
+                    </ul>
+                </div>
+
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="survival.objective3.title">Product</h3>
+                    <ul>
+                        <li data-i18n="survival.objective3.item1">Deliver a short demo with combat, inventory, and
+                            puzzle elements.</li>
+                        <li data-i18n="survival.objective3.item2">Integrate a final boss fight to demonstrate game
+                            mechanics.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Proceso de diseño -->
+        <p class="title" data-i18n="survival.designProcessTitle">Design Process</p>
+        <section class="research-section">
+            <p class="subtitle" data-i18n="survival.researchTitle">Research</p>
+            <div class="research-content">
+                <div class="research-text">
+                    <h4 class="research-subtitle" data-i18n="survival.keyFindingsTitle">Key Findings</h4>
+                    <ul class="research-list">
+                        <li data-i18n="survival.keyFinding1">Players prefer intuitive combat and exploration controls.
+                        </li>
+                        <li data-i18n="survival.keyFinding2">Lighting and sound design greatly enhance atmosphere and
+                            immersion.</li>
+                        <li data-i18n="survival.keyFinding3">Balancing resource scarcity increases the sense of survival
+                            and tension.</li>
+                    </ul>
+                    <h4 class="research-subtitle" data-i18n="survival.methodologyTitle">Methodology</h4>
+                    <p class="research-method" data-i18n="survival.methodology">Iterative Game Design</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Diseño visual -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="survival.designTitle">Design</p>
+            <div class="research-content">
+                <div class="research-text">
+                    <ul class="research-list">
+                        <li data-i18n="survival.designItem1">
+                            During the design phase, environments, menus, and UX flows were crafted in Figma before
+                            implementation in Unity.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Screenshots -->
+        <div class="page">
+            <div>
+                <p class="subtitle">Menu</p>
+                <div class="image-placeholder"><img src="./assets/imgs/survivalM/survival.jpg" alt="menu image"></div>
+            </div>
+            <div>
+                <p class="subtitle">Pause Menu</p>
+                <div class="image-placeholder"><img src="./assets/imgs/survivalM/survivalM8.png" alt="pause menu image">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">Boss Battle</p>
+                <div class="image-placeholder"><img src="./assets/imgs/survivalM/survivalM6.png" alt="boss battle">
+                </div>
+            </div>
+            <div>
+                <p class="subtitle">Game Over Menu</p>
+                <div class="image-placeholder"><img src="./assets/imgs/survivalM/survivalM10.png" alt="game over"></div>
+            </div>
+        </div>
+
+        <!-- Resultados -->
+        <section class="research-section">
+            <p class="subtitle" data-i18n="survival.resultsTitle">Results</p>
+            <div class="research-content">
+                <div class="objective-card">
+                    <h4 class="research-subtitle" data-i18n="survival.resultsDescription">
+                        A 3D demo that successfully captures the essence of classic survival horror through immersive
+                        design, challenging mechanics, and tight resource management.
+                    </h4>
+                </div>
+            </div>
+        </section>
+        <section class="objectives-section">
+            <div class="objectives-container">
+                <!-- Retos y Aprendizajes -->
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="survival.challengesTitle">Challenges and Learnings</h3>
+                    <p class="research-subtitle" data-i18n="survival.challengesDescription" style="font-size: 16px;">
+                        This project was both challenging and rewarding. It was fascinating to observe how an initial
+                        idea
+                        evolved into a playable product through iteration and testing. I improved my understanding of
+                        game
+                        flow, difficulty balance, and environmental storytelling.
+                    </p>
+                    <ul>
+                        <li data-i18n="survival.challengeItem1">
+                            Balancing gameplay difficulty while maintaining tension and player engagement.
+                        </li>
+                        <li data-i18n="survival.challengeItem2">
+                            Designing realistic 3D lighting to enhance immersion and mood.
+                        </li>
+                        <li data-i18n="survival.challengeItem3">
+                            Translating conceptual designs into functional code within Unity.
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Próximos Pasos -->
+                <div class="objective-card">
+                    <h3 class="objective-category" data-i18n="survival.nextStepsTitle">Next Steps</h3>
+                    <ul>
+                        <li data-i18n="survival.nextStep1">
+                            Develop a longer version including new levels and story arcs.
+                        </li>
+                        <li data-i18n="survival.nextStep2">
+                            Implement voice acting and more immersive sound effects.
+                        </li>
+                        <li data-i18n="survival.nextStep3">
+                            Publish the full version on Steam or itch.io.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <br>
     </div>
 
+    <!-- Footer -->
     <footer class="footer py-3">
         <div class="container">
             <p class="small mb-0 text-light">
                 &copy;
                 <script>document.write(new Date().getFullYear())</script> Created With <i
-                    class="ti-heart text-danger"></i>
-                By <a href="#" target="_blank"><span class="text-danger">MateoB</span></a>
+                    class="ti-heart text-danger"></i> By <a href="#" target="_blank"><span
+                        class="text-danger">MateoB</span></a>
             </p>
         </div>
     </footer>
 
+    <!-- Navigation arrows -->
     <a class="flecha-flotante" href='fragment.html'>
         <i class="ti-angle-double-left"></i>
     </a>
     <a class="flecha-flotante-right" href='dto.html'>
         <i class="ti-angle-double-right"></i>
     </a>
+
     <a class="projects" href="portafolio.html">
-        <div class="btn btn-outline-danger">
-            Projects
-        </div>
+        <div class="btn btn-outline-danger" data-i18n="survival.projects">Projects</div>
     </a>
 
-    <!-- core  -->
+    <!-- Scripts -->
     <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
-
-    <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <!-- Isotope  -->
     <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.16/dist/umd/i18next.min.js"></script>
 
-    <!-- MateoB js -->
     <script src="assets/js/mateob.js"></script>
-
-
+    <script src="assets/js/i18n.js"></script>
 </body>
 
 </html>
